ve.ui.CodeMirror: Fix padding to match VisualEditor's padding
VisualEditor's default padding for the source editing surface was
changed in Icdc6f1e2a7544ebbd828f85ff370113a0e06983a (June 2018).

Since then the alignment of editing surface and CodeMirror syntax
highlighting surface was broken in skins that don't override the
default padding (basically every skin except Vector and MonoBook).
Unfortunately Vector and MonoBook happen to be the only skins we
officially support and actually test, so the issue went unnoticed.

Bug: T205154
Bug: T205658

--- a/resources/modules/ve-cm/ve.ui.CodeMirror.init.less
+++ b/resources/modules/ve-cm/ve.ui.CodeMirror.init.less
@@ -13,7 +13,7 @@
 		background: transparent;
 
 		// Core VE default padding
-		padding: 0.5em 1.5em;
+		padding: 1.5em;
 
 		// Skin specific paddings
 		.skin-vector & {
